Fix for STORE-1355 : Add padding to make visible seperation between image upload button and no image messaage

--- a/apps/publisher/themes/default/css/custom.css
+++ b/apps/publisher/themes/default/css/custom.css
@@ -1397,6 +1397,7 @@ sup.required-field{
 }
 .no-image {
     position: relative;
+    padding-right: 55px;
 }
 .no-image::after {
     content: "\2757 " " " attr(data-noImage);
